[tool.poetry]
name = "test_hw_9"
version = "0.1.0"
description = ""
authors = ["romaniuk-o <O.romaniuk54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
Faker = "^14.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
